@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2013 - TortoiseSVN
+// Copyright (C) 2003-2014 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -57,13 +57,15 @@ CTSVNPath CTempFiles::ConstructTempPath(const CTSVNPath& path, const SVNRev& rev
         {
             // use the UI path, which does unescaping for urls
             CString filename = path.GetUIFileOrDirectoryName();
-            // remove illegal chars which could be present in urls
+            // remove illegal chars which could be present in a temp filename
             filename.Remove('?');
             filename.Remove('*');
             filename.Remove('<');
             filename.Remove('>');
             filename.Remove('|');
             filename.Remove('"');
+            filename.Remove(':');
+            filename.Remove('\'');
             // the inner loop assures that the resulting path is < MAX_PATH
             // if that's not possible without reducing the 'filename' to less than 5 chars, use a path
             // that's longer than MAX_PATH (in that case, we can't really do much to avoid longer paths)
